# genogram

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  go.mod  go.sum  main.cpp  main.go  node_editor.h  renderer.cpp
graph/: edge.go  forcedlayout.go  graph_widget.go  node.go
